auth/registration fixes

--- a/client/static/index.html
+++ b/client/static/index.html
@@ -26,15 +26,15 @@
                 <h2>Register</h2>
                 <input type="email" id="register-email" placeholder="Email">
                 <div class="password-section">
-                    <input type="password" id="register-password" placeholder="Password (min. 12 characters)">
+                    <input type="password" id="register-password" placeholder="Password (min. 14 characters)">
                     <div class="password-requirements">
                         <div id="register-password-strength" class="strength-meter"></div>
                         <ul class="requirements-list">
-                            <li>At least 12 characters</li>
+                            <li>At least 14 characters</li>
                             <li>At least one uppercase letter</li>
                             <li>At least one lowercase letter</li>
                             <li>At least one number</li>
-                            <li>At least one special character</li>
+                            <li>At least one special character: `~!@#$%^&*()-_=+[]{}|;:,.<>?</li>
                         </ul>
                     </div>
                     <input type="password" id="register-password-confirm" placeholder="Confirm Password">
@@ -81,15 +81,15 @@
                 </div>
                 
                 <div id="customPasswordSection" class="hidden">
-                    <input type="password" id="filePassword" placeholder="Custom File Password (min. 12 characters)">
+                    <input type="password" id="filePassword" placeholder="Custom File Password (min. 14 characters)">
                     <div class="password-requirements">
                         <div id="password-strength" class="strength-meter"></div>
                         <ul class="requirements-list">
-                            <li>At least 12 characters</li>
+                            <li>At least 14 characters</li>
                             <li>At least one uppercase letter</li>
                             <li>At least one lowercase letter</li>
                             <li>At least one number</li>
-                            <li>At least one special character</li>
+                            <li>At least one special character: `~!@#$%^&*()-_=+[]{}|;:,.<>?</li>
                         </ul>
                     </div>
                 </div>
