--- a/client/static/totp-test.html
+++ b/client/static/totp-test.html
@@ -180,7 +180,7 @@
                 </div>
                 
                 <div class="backup-codes hidden" id="backupCodesSection">
-                    <h3>🔐 Backup Codes</h3>
+                    <h3>Backup Codes</h3>
                     <p><strong>Save these codes somewhere safe!</strong> You can use them to access your account if you lose your authenticator device.</p>
                     <ul id="backupCodesList"></ul>
                 </div>
