--- a/client/static/index.html
+++ b/client/static/index.html
@@ -166,8 +166,7 @@
     </div>
 
     <script src="/wasm_exec.js"></script>
-    <script src="/js/security.js"></script>
-    <script src="/js/app.js"></script>
+    <script src="/js/dist/app.js"></script>
     
     <script>
         // Update TLS version meta tag from response header
