--- a/client/static/chunked-upload.html
+++ b/client/static/chunked-upload.html
@@ -16,7 +16,7 @@
     <script src="/wasm_exec.js"></script>
     
     <!-- App scripts -->
-    <script src="/js/app.js"></script>
+    <script src="/js/dist/app.js"></script>
     
     <!-- Chunked upload/download scripts -->
     <script src="/js/chunked-uploader.js"></script>
