add Amazon S3 support

--- a/client/static/index.html
+++ b/client/static/index.html
@@ -29,7 +29,7 @@
                     <div class="feature-icon">🔐</div>
                     <h3 class="feature-title">Client-Side Encryption</h3>
                     <p class="feature-description">
-                        All files are encrypted in your browser before upload. Your data is protected by AES-256-GCM encryption, ensuring that even we cannot access your files.
+                        All files are encrypted in your browser before upload. Your data is protected by AES-256-GCM encryption, ensuring that even admins cannot access your files.
                     </p>
                 </div>
 
@@ -45,7 +45,7 @@
                     <div class="feature-icon">📱</div>
                     <h3 class="feature-title">Mandatory 2FA</h3>
                     <p class="feature-description">
-                        Time-based One-Time Passwords (TOTP) are required for all accounts, with support for Google Authenticator, Authy, and other standard apps.
+                        Time-based One-Time Passwords (TOTP) are required for all accounts, with support for Google Authenticator, Authy, and other standard 2FA apps.
                     </p>
                 </div>
 
@@ -53,7 +53,7 @@
                     <div class="feature-icon">🔗</div>
                     <h3 class="feature-title">Secure File Sharing</h3>
                     <p class="feature-description">
-                        Share files with additional password protection using Argon2id key derivation. Recipients don't need accounts - just the share password.
+                        Share files with additional password protection using Argon2id key derivation. Recipients don't need accounts - just the link and the share password.
                     </p>
                 </div>
 
@@ -61,7 +61,7 @@
                     <div class="feature-icon">☁️</div>
                     <h3 class="feature-title">Flexible Storage</h3>
                     <p class="feature-description">
-                        Built on MinIO with support for S3-compatible storage providers including Backblaze B2, Wasabi, Vultr Object Storage, and more.
+                        Built on MinIO with support for S3-compatible storage providers including Amazon S3, Backblaze B2, Wasabi and Vultr Object Storage.
                     </p>
                 </div>
 
@@ -69,7 +69,7 @@
                     <div class="feature-icon">🔄</div>
                     <h3 class="feature-title">Redundant Backups</h3>
                     <p class="feature-description">
-                        Your encrypted files are safely stored with built-in redundancy and can be replicated across multiple storage providers for maximum reliability.
+                        Your encrypted files are safely stored with built-in redundancy and replication across multiple drives and storage servers.
                     </p>
                 </div>
             </div>
