styling, add code link

--- a/client/static/index.html
+++ b/client/static/index.html
@@ -74,6 +74,13 @@
                 </div>
             </div>
         </section>
+
+        <!-- Footer Section -->
+        <footer class="footer-section">
+            <div class="github-link-container">
+                <p class="github-link">AGPLv3 Open Source: <a href="https://github.com/arkfile/Arkfile" target="_blank">View Code</a></p>
+            </div>
+        </footer>
     </div>
 
     <!-- Authentication Modal (hidden by default) -->
