--- a/client/static/chunked-upload.html
+++ b/client/static/chunked-upload.html
@@ -76,7 +76,7 @@
                                 <div class="strength-meter" id="password-strength"></div>
                             </div>
                             <ul class="requirements-list">
-                                <li>At least 12 characters</li>
+                                <li>At least 14 characters</li>
                                 <li>At least one uppercase letter</li>
                                 <li>At least one lowercase letter</li>
                                 <li>At least one number</li>
@@ -121,7 +121,7 @@
 
     <footer class="site-footer">
         <div class="container">
-            <p>© 2025 Arkfile - Secure File Storage &amp; Sharing</p>
+            <p>© 2025 Arkfile - Secure File Vault</p>
             <nav class="footer-nav">
                 <a href="/docs/security">Security</a>
                 <a href="/docs/privacy">Privacy</a>
