--- a/client/static/index.html
+++ b/client/static/index.html
@@ -10,6 +10,13 @@
     <link rel="stylesheet" href="/css/home.css">
 </head>
 <body>
+    <!-- WASM Status Indicator -->
+    <div id="wasm-status" class="wasm-status loading">
+        <span class="status-icon">[...]</span>
+        <span class="status-text">Loading WASM...</span>
+        <span class="status-details"></span>
+    </div>
+
     <div class="home-container">
         <!-- Hero Section -->
         <section class="hero-section">
