--- a/client/static/index.html
+++ b/client/static/index.html
@@ -113,6 +113,7 @@
                             <li>At least one lowercase letter</li>
                             <li>At least one number</li>
                             <li>At least one special character: `~!@#$%^&*()-_=+[]{}|;:,.<>?</li>
+                            <li id="entropy-requirement">Minimum entropy: 60 bits</li>
                         </ul>
                     </div>
                     <input type="password" id="register-password-confirm" placeholder="Confirm Password">
