--- a/client/static/chunked-upload.html
+++ b/client/static/chunked-upload.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/chunked-upload.css">
     
     <!-- Compiled TypeScript application -->
+    <script src="/js/libopaque.js"></script>
     <script src="/js/dist/app.js"></script>
 </head>
 <body>
