--- a/client/static/file-share.html
+++ b/client/static/file-share.html
@@ -224,6 +224,7 @@
     </main>
 
     <!-- Compiled TypeScript application -->
+    <script src="/js/libopaque.js"></script>
     <script src="/js/dist/app.js"></script>
     <script>
         // Constants and globals
