--- a/client/static/index.html
+++ b/client/static/index.html
@@ -237,6 +237,7 @@
         </div>
     </div>
 
+    <script src="/js/libopaque.js"></script>
     <script src="/js/dist/app.js"></script>
 </body>
 </html>
