share system fixes

--- a/client/static/index.html
+++ b/client/static/index.html
@@ -234,6 +234,17 @@
                 <h2>Your Files</h2>
                 <div id="filesList"></div>
             </div>
+
+            <!-- Share List Section -->
+            <div class="share-list-section">
+                <div class="share-list-header">
+                    <h2 class="share-list-title">Your Shares</h2>
+                    <button type="button" id="refresh-shares-btn" class="share-list-refresh">Refresh</button>
+                </div>
+                <div id="sharesList" class="share-list-container">
+                    <div class="share-list-loading">Loading shares...</div>
+                </div>
+            </div>
         </div>
     </div>
 
