frontend: fix up/download file fn's, add key caching options

--- a/client/static/index.html
+++ b/client/static/index.html
@@ -188,6 +188,10 @@
                 <div id="security-settings" class="security-panel hidden">
                     <h3>Security Settings</h3>
                     <div class="setting-item">
+                        <p><strong>Lock Encryption Key:</strong> Clear your cached encryption key. You'll need to re-enter your password for the next file operation.</p>
+                        <button type="button" id="lock-key-btn" class="secondary-button">Lock Key</button>
+                    </div>
+                    <div class="setting-item">
                         <p><strong>Session Security:</strong> For maximum security, you can revoke access from all devices. This will sign you out everywhere.</p>
                         <button type="button" id="revoke-sessions-btn" class="danger-button">Revoke All Sessions</button>
                     </div>
