fix TOTP setup, QR image; add is_approved checks

--- a/client/static/index.html
+++ b/client/static/index.html
@@ -174,6 +174,26 @@
                     <button type="button" id="cancel-registration-btn" class="secondary-button">Cancel Registration</button>
                 </div>
             </div>
+
+            <!-- Pending Approval Section -->
+            <div class="pending-approval-section hidden" id="pending-approval-section">
+                <h2>Account Pending Approval</h2>
+                <div class="pending-approval-content">
+                    <div class="pending-icon">[!]</div>
+                    <p class="pending-message">
+                        <strong>Your account has been created successfully.</strong>
+                    </p>
+                    <p class="pending-details">
+                        Your account is pending administrator approval. You will be able to access your files once an administrator has approved your account.
+                    </p>
+                    <p class="pending-info">
+                        Please check back later or contact your administrator if you need immediate access.
+                    </p>
+                </div>
+                <div class="pending-actions">
+                    <button type="button" id="pending-logout-btn" class="secondary-button">Logout</button>
+                </div>
+            </div>
         </div>
 
         <div class="file-section hidden" id="file-section">
