--- a/client/static/chunked-upload.html
+++ b/client/static/chunked-upload.html
@@ -118,7 +118,7 @@
 
     <footer class="site-footer">
         <div class="container">
-            <p>© 2025 Arkfile - Secure File Vault</p>
+            <p>Arkfile - Private File Vault</p>
             <nav class="footer-nav">
                 <a href="/docs/security">Security</a>
                 <a href="/docs/privacy">Privacy</a>
